# Rover

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  macrover.code-workspace  start_nvidia_docker.bash
Faraday_ROS2_WS/src/control/: package.xml  setup.py
Faraday_ROS2_WS/src/frame_shifter/: package.xml  setup.cfg  setup.py
Faraday_ROS2_WS/src/rover_gpscompass/: README.md  package.xml  setup.cfg
Faraday_ROS2_WS/src/rover_heading/: setup.py
ROS_WS/: Makefile  README.md
ROS_WS/devel/: .catkin  .rosinstall  setup.sh
ROS_WS/src/: arm.txt
ROS_WS/src/arm_can/: CMakeLists.txt  package.xml
ROS_WS/src/arm_config_july2/: .setup_assistant  CMakeLists.txt  package.xml
ROS_WS/src/arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ROS_WS/src/aruco_mark/: CMakeLists.txt  package.xml
ROS_WS/src/aruco_mark/launch/: aruco_ros.launch
ROS_WS/src/aruco_mark/setup/: setupTX2_aruco.sh  undoSetup.sh
docker/: README.md
docker/jetson/: Dockerfile
docker/linux/: Dockerfile  start_linux_docker.bash
docker/nvidia/: Dockerfile  start_nvidia_docker.bash
docker/wsl/: Dockerfile  start_wsl_docker.bash
firmware/DriveFirmware/: DriveFirmware.ino  PID_v1.cpp  PID_v1.h  defines.h  structs.h
firmware/EncoderPID2/: EncoderPID2.ino  PID_v1.cpp  PID_v1.h
firmware/RAD/: RAD_Board.ioc  STM32F072RBTX_FLASH.ld
firmware/RAD_Nucleo/: CMakeLists.txt
firmware/cls/: README.md  cls.ino
firmware/dmc_stm32/: dmc_stm32.ino  drive_test.ino
firmware/dmc_stm32_encoder/: dmc_stm32_encoder.ino
firmware/input_capture_test/: input_capture_test.ino
firmware/rad_board/: .cproject  .mxproject  .project  rad_board.ioc
firmware/science/: science.ino
firmware/smc_stm32/: serial_arm_stepper_control.ino  smc_stm32.ino  smc_stm32_revised.ino
firmware/smc_stm32_revised/: smc_stm32_revised.ino
firmware/stm32_rad/: .mxproject  RAD_Base_Full Debug.launch  RAD_Base_Full.ioc
utilities/: ble_detect.py  rover_prestart.bash  start_bridge.bash  teensy_setup.bash
utilities/bash_helpers/: get_network_ip
utilities/beacon_scraper/: README.md  astronaut_beacon.py  beacon_listener_params.py  reactor_beacon.py  wifi.py
(+445 files in other folders)
