<?xml version="1.0"?>
<package format="2">
  <name>aruco_mark</name>
  <version>0.0.0</version>
  <description>The aruco_mark package</description>

  <maintainer email="haashimr@todo.todo">haashimr</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>aruco_detect</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
